apps/core/argocd/namespace.yaml
---
apiVersion: v1
kind: Namespace

metadata:
  name: core-argocd
  labels:
    gateway-access: "true"
