apps/core/argocd/patch-statefulsets.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: argocd-application-controller

spec:
  replicas: 1
